<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="playlist">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_ya_praktikum_android_developer">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">drobitkoivan@yandex.ru</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="internet_error">Проблемы со связью</string>
    <string name="internet_error_explanation">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="time_00_00">00:00</string>
    <string name="featured_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_media_library_is_empty">Ваша медиатека пуста</string>
    <string name="You_havent_created_any_playlists_yet">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="the_track_has_already_been_added_to_the_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="there_is_no_track_list_in_this_playlist_that_can_be_shared">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <plurals name="numberOfTracksAvailable">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="numberOfTimeAvailable">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист "%1$s"?</string>
    <string name="title_activity_main_compose">MainActivityCompose</string>
    <string name="back">Назад</string>
</resources>