<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:padding="16dp"
                android:src="@drawable/vector_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingTop="10dp"
                android:paddingBottom="12dp"
                android:text="@string/settings"
                android:textColor="@color/title_color"
                android:textSize="@dimen/title_text_size" />


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="21dp"
                android:layout_marginStart="16dp"
                android:text="@string/dark_mode"
                android:textColor="@color/black"
                android:textSize="@dimen/basic_text_size" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="22dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="21dp"
                android:layout_marginStart="16dp"
                android:text="@string/share_app"
                android:textColor="@color/black"
                android:textSize="@dimen/basic_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="21dp"
                android:src="@drawable/vector_share" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="21dp"
                android:layout_marginStart="16dp"
                android:text="@string/write_to_support"
                android:textColor="@color/black"
                android:textSize="@dimen/basic_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="22.1dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="20.9dp"
                android:src="@drawable/group_support" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginVertical="21dp"
                android:layout_marginStart="16dp"
                android:text="@string/user_agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/basic_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="23dp"
                android:src="@drawable/vector_forward" />
        </FrameLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>