<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".playlists.ui.AddPlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_padding_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_padding_24dp" />

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/vector_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding_margin"
        android:text="@string/new_playlist"
        app:layout_constraintBottom_toBottomOf="@id/button_back"
        app:layout_constraintStart_toEndOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/button_back" />

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="@dimen/all_free_space"
            android:layout_marginTop="@dimen/margin_padding_46dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="312:312"
            android:background="@drawable/shape_add_photo"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/button_back"/>

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_photo"
            app:layout_constraintBottom_toBottomOf="@id/coverImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/coverImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/all_free_space"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_padding_margin"
        android:layout_marginTop="@dimen/margin_padding_26dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coverImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding_margin"
            android:paddingVertical="@dimen/switch_padding_horizontal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDescription"
        style="@style/TextInputLayout"
        android:layout_width="@dimen/all_free_space"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_padding_margin"
        android:layout_marginTop="@dimen/margin_padding_top"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_padding_margin"
            android:paddingVertical="@dimen/switch_padding_horizontal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create"
        style="@style/MainButtonStyle"
        android:layout_width="@dimen/all_free_space"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_17dp"
        android:layout_marginBottom="@dimen/margin_padding_32dp"
        android:enabled="false"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>