<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AudioPlayerActivity"
        android:background="?attr/colorPrimary">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_padding_24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_padding_24dp" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_20dp"
            android:layout_marginTop="@dimen/margin_padding_20dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/vector_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="@dimen/all_free_space"
            android:layout_marginTop="46dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintDimensionRatio="312:312"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/button_back" />

        <TextView
            android:id="@+id/track_name"
            style="@style/TrackTitleTextStyle"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_24dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/cover"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/TrackArtistTextStyle"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_title"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="@string/app_name" />

        <ImageView
            android:id="@+id/button_add_to_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/button_add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <ImageView
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38.33dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/vector_play"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageView
            android:id="@+id/button_add_to_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/graphite_black"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/button_add_to_favorites"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <TextView
            android:id="@+id/listening_time"
            style="@style/TrackArtistTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_layout"
            android:gravity="center"
            android:text="@string/time_00_00"
            app:layout_constraintEnd_toEndOf="@id/button_play"
            app:layout_constraintStart_toStartOf="@id/button_play"
            app:layout_constraintTop_toBottomOf="@id/button_play" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline_track_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_padding_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline_track_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_padding_margin" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/track_info_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="time" />

        <TextView
            android:id="@+id/time"
            style="@style/TitleMoreInfoStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_39dp"
            android:text="@string/duration"
            app:layout_constraintStart_toEndOf="@id/left_guideline_track_info"
            app:layout_constraintTag="time"
            app:layout_constraintTop_toBottomOf="@id/listening_time" />

        <TextView
            android:id="@+id/track_time"
            style="@style/TrackMoreInfoStyle"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_39dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_track_info"
            app:layout_constraintStart_toEndOf="@id/track_info_barrier"
            app:layout_constraintTop_toBottomOf="@id/listening_time"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/album"
            style="@style/TitleMoreInfoStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            android:text="@string/album"
            app:layout_constraintStart_toEndOf="@id/left_guideline_track_info"
            app:layout_constraintTag="time"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/album_name"
            style="@style/TrackMoreInfoStyle"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_track_info"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/track_time"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/year"
            style="@style/TitleMoreInfoStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            android:text="@string/year"
            app:layout_constraintStart_toEndOf="@id/left_guideline_track_info"
            app:layout_constraintTag="time"
            app:layout_constraintTop_toBottomOf="@id/album" />

        <TextView
            android:id="@+id/track_year"
            style="@style/TrackMoreInfoStyle"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_track_info"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/album_name"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/genre"
            style="@style/TitleMoreInfoStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@id/left_guideline_track_info"
            app:layout_constraintTag="time"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/track_genre"
            style="@style/TrackMoreInfoStyle"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_track_info"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/track_year"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/country"
            style="@style/TitleMoreInfoStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            android:text="@string/country"
            app:layout_constraintStart_toEndOf="@id/left_guideline_track_info"
            app:layout_constraintTag="time"
            app:layout_constraintTop_toBottomOf="@id/genre" />

        <TextView
            android:id="@+id/track_country"
            style="@style/TrackMoreInfoStyle"
            android:layout_width="@dimen/all_free_space"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_17dp"
            app:layout_constraintEnd_toStartOf="@id/right_guideline_track_info"
            app:layout_constraintStart_toEndOf="@id/time"
            app:layout_constraintTop_toBottomOf="@id/track_genre"
            tools:text="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>